schema in separate file

--- a/swagger/vdjserver-api.yaml
+++ b/swagger/vdjserver-api.yaml
@@ -23,241 +23,7 @@ servers:
 
 components:
   schemas:
-    BasicResponse:
-      description: Basic response object
-      discriminator:
-        propertyName: VDJServer
-      type: object
-      properties:
-        status:
-          type: boolean
-        message:
-          type: string
-
-    Info:
-      description: Provides information about the API service and/or response
-      discriminator:
-        propertyName: VDJServer
-      type: object
-      properties:
-        title:
-          type: string
-        version:
-          type: string
-        description:
-          type: string
-        contact: 
-          type: object
-          properties:
-            name:
-              type: string
-            url:
-              type: string
-            email:
-              type: string
-        license:
-          type: object
-          properties:
-            name:
-              type: string
-            url:
-              type: string
-
-    Recaptcha:
-      description: Google recaptcha response.
-      discriminator:
-        propertyName: VDJServer
-      type: object
-      required:
-        - g-recaptcha-response
-      properties:
-        g-recaptcha-response:
-          type: string
-          description: The recaptcha response
-
-    UserAccount:
-      description: User account.
-      discriminator:
-        propertyName: VDJServer
-      type: object
-      required:
-        - username
-        - password
-        - email
-      properties:
-        username:
-          type: string
-        password:
-          type: string
-          nullable: true
-        email:
-          type: string
-        firstName:
-          type: string
-        lastName:
-          type: string
-        city:
-          type: string
-        state:
-          type: string
-        country:
-          type: string
-        affiliation:
-          type: string
-
-    UserAccountCreation:
-      description: Account creation with user and recaptcha objects
-      discriminator:
-        propertyName: VDJServer
-      allOf:
-        - $ref: '#/components/schemas/UserAccount'
-        - $ref: '#/components/schemas/Recaptcha'
-
-    MetadataFile:
-      description: AIRR metadata file.
-      discriminator:
-        propertyName: VDJServer
-      type: object
-      properties:
-        Info:
-          $ref: '#/components/schemas/Info'
-        Repertoire:
-          type: array
-          items:
-            $ref: '#/components/schemas/Repertoire'
-
-    Project:
-      description: VDJServer project which is an extension of the AIRR Study object.
-      discriminator:
-        propertyName: VDJServer
-      allOf:
-        - $ref: '#/components/schemas/Study'
-        - type: object
-          properties:
-            owner:
-              description: Username that owns the project.
-              type: string
-
-    ProjectMetadata:
-      description: Tapis metadata object for a project.
-      discriminator:
-        propertyName: VDJServer
-      type: object
-      properties:
-        uuid:
-          type: string
-          description: metadata identifier
-        value:
-          $ref: '#/components/schemas/Project'
-
-    ProjectPermission:
-      description: Permissions request for project
-      discriminator:
-        propertyName: VDJServer
-      type: object
-      required:
-        - project_uuid
-      properties:
-        project_uuid:
-          description: project related to the permissions.
-          type: string
-
-    UserPermission:
-      description: Permissions request for user
-      discriminator:
-        propertyName: VDJServer
-      required:
-        - username
-      allOf:
-        - $ref: '#/components/schemas/ProjectPermission'
-        - type: object
-          properties:
-            username:
-              description: user to apply permissions
-              type: string
-
-    MetadataPermission:
-      description: Permissions request for project metadata object
-      discriminator:
-        propertyName: VDJServer
-      required:
-        - metadata_uuid
-      allOf:
-        - $ref: '#/components/schemas/ProjectPermission'
-        - type: object
-          properties:
-            metadata_uuid:
-              description: metadata object to apply permissions
-              type: string
-
-    Feedback:
-      description: Feedback message.
-      discriminator:
-        propertyName: VDJServer
-      type: object
-      properties:
-        feedback:
-          type: string
-          description: message content
-
-    PublicFeedback:
-      description: Public feedback message.
-      discriminator:
-        propertyName: VDJServer
-      allOf:
-        - $ref: '#/components/schemas/Feedback'
-        - $ref: '#/components/schemas/Recaptcha'
-        - type: object
-          properties:
-            email:
-              description: User email.
-              type: string
-
-    ErrorTelemetry:
-      description: Error telemetry.
-      discriminator:
-        propertyName: VDJServer
-      type: object
-      properties:
-        project_uuid:
-          type: string
-        job_uuid:
-          type: string
-        filename:
-          type: string
-        method:
-          type: string
-        error:
-          type: string
-        view:
-          type: string
-        browser:
-          type: string
-        os:
-          type: string
-
-    ADCRepositorySet:
-      description: Set of ADC repositories.
-      discriminator:
-        propertyName: VDJServer
-      type: object
-      required:
-        - adc
-      properties:
-        adc:
-          type: object
-
-    Test:
-      description: Test object
-      discriminator:
-        propertyName: VDJServer
-      type: object
-      properties:
-        owner:
-          description: Username that owns the project.
-          type: string
-          nullable: true
-
+    $ref: 'https://bitbucket.org/vdjserver/vdjserver-schema/raw/master/vdjserver-schema.yaml'
 
   securitySchemes:
     user_authorization:
@@ -520,7 +286,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/MetadataFile'
+                $ref: 'https://raw.githubusercontent.com/airr-community/airr-standards/v1.4.1/specs/airr-schema-openapi3.yaml#/DataFile'
         '400':
           description: Bad request.
         '401':
