--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "private": true,
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "8.0.0",
+    "axios": "1.1.3",
     "body-parser": "1.10.2",
     "bull": "^3.20.0",
     "chai": "3.5.0",
