--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "sinon": "1.17.4",
     "socket.io": "1.3.7",
     "tar": "^6.1.2",
+    "vdj-tapis-js": "file:app/vdj-tapis-js",
+    "vdjserver-schema": "file:app/vdjserver-schema",
     "underscore": "1.7.0"
   },
   "devDependencies": {
