--- a/.env.defaults
+++ b/.env.defaults
@@ -1,3 +1,13 @@
+# This is shared across the API services
+TAPIS_VERSION=2
+#TAPIS_VERSION=3
+
+# Tapis V3 Auth
+# This is for accessing the standard Tapis V3 APIs
+TAPIS_V3_CLIENT_KEY=
+TAPIS_V3_CLIENT_SECRET=
+TAPIS_V3_HOST=vdjserver.tapis.io
+
 # WSO2 Settings
 WSO2_CLIENT_KEY=
 WSO2_CLIENT_SECRET=
@@ -24,7 +34,7 @@ MONGODB_LOAD_COLLECTION=
 
 # AIRR Data Commons
 ADC_REPOSITORY_ENTRY=adc
-ENABLE_ADC_DOWNLOAD_CACHE=true
+ENABLE_ADC_DOWNLOAD_CACHE=false
 ENABLE_ADC_LOAD=false
 
 # HOST user for Corral file access
