validation of analysis workflow

--- a/.env.defaults
+++ b/.env.defaults
@@ -53,6 +53,7 @@ VDJ_API_PORT=8081
 SESSION_SECRET=
 RECAPTCHA_SECRET=
 RECAPTCHA_PUBLIC=
+ENABLE_JOB_QUEUES=false
 
 # VDJ API Test Settings
 ALLOW_RECAPTCHA_SKIP=false
