--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -27,12 +27,12 @@ stderr_logfile_maxbytes = 0
 #startsecs   = 0
 #autorestart = false
 
-[program:redis]
-command = /usr/bin/redis-server /etc/redis/redis.conf
-autostart    = true
-autorestart  = true
-startretries = 10
-stdout_logfile  = /dev/stdout
-stderr_logfile  = /dev/stderr
-stdout_logfile_maxbytes = 0
-stderr_logfile_maxbytes = 0
+#[program:redis]
+#command = /usr/bin/redis-server /etc/redis/redis.conf
+#autostart    = true
+#autorestart  = true
+#startretries = 10
+#stdout_logfile  = /dev/stdout
+#stderr_logfile  = /dev/stderr
+#stdout_logfile_maxbytes = 0
+#stderr_logfile_maxbytes = 0
