--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "GNU AGPL V3",
   "private": true,
   "dependencies": {
-    "@apidevtools/json-schema-ref-parser": "8.0.0",
+    "@apidevtools/json-schema-ref-parser": "^10.1.0",
     "airr-js": "file:app/airr-standards/lang/js",
     "axios": "1.1.3",
     "body-parser": "1.10.2",
@@ -31,7 +31,6 @@
     "express-openapi": "^6.0.0",
     "form-data": "2.3.2",
     "json-approver": "1.0.3",
-    "json-schema-ref-parser": "5.1.3",
     "js-yaml": "3.13.1",
     "kue": "0.10.5",
     "mocha": "2.5.3",
@@ -62,7 +61,7 @@
     "test": "make test"
   },
   "engines": {
-    "node": ">=0.10.13",
-    "npm": "1.3.x"
+    "node": ">=18.17",
+    "npm": ">=9.6"
   }
 }
