--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -1,7 +1,7 @@
 [supervisord]
 
 [program:node]
-command = /usr/bin/node --harmony /vdjserver-web-api/app/scripts/app.js
+command = /usr/bin/node --harmony --openssl-legacy-provider /vdjserver-web-api/app/scripts/app.js
 autostart    = true
 autorestart  = true
 startretries = 10
