implement visualization stub

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sinon": "1.17.4",
     "socket.io": "1.3.7",
     "tar": "^6.1.2",
+    "uuid": "^9.0.1",
     "vdj-tapis-js": "file:app/vdj-tapis-js",
     "vdjserver-schema": "file:app/vdjserver-schema",
     "underscore": "1.7.0"
