--- a/package.json
+++ b/package.json
@@ -20,39 +20,38 @@
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^10.1.0",
     "airr-js": "file:app/vdjserver-schema/airr-standards/lang/js",
-    "axios": "1.1.3",
+    "axios": ">=1.6.0",
     "body-parser": "1.10.2",
     "bull": "^3.20.0",
     "chai": "3.5.0",
     "csv-parser": "^2.3.2",
     "d3": "4.2.7",
     "errorhandler": "1.3.2",
-    "express": "4.11.1",
+    "express": ">=4.19.2",
     "express-openapi": "^6.0.0",
     "form-data": "2.3.2",
     "json-approver": "1.0.3",
     "js-yaml": "3.13.1",
     "kue": "0.10.5",
     "mocha": "2.5.3",
-    "moment": "2.10.6",
-    "moment-timezone": "0.4.1",
+    "moment": ">=2.29.2",
+    "moment-timezone": ">=0.5.35",
     "mongodb": "^3.4.1",
-    "morgan": "1.5.1",
     "nock": "8.0.0",
     "nodemailer": "",
     "nodemailer-sendmail-transport": "",
-    "passport": "0.2.1",
+    "passport": ">=0.6.0",
     "passport-http": "0.2.2",
     "q": "1.1.2",
     "recaptcha-v2": "0.1.3",
-    "request": "2.51.0",
+    "request": ">=2.68.0",
     "sinon": "1.17.4",
-    "socket.io": "1.3.7",
+    "socket.io": ">=2.4.0",
     "tar": "^6.1.2",
     "uuid": "^9.0.1",
     "vdj-tapis-js": "file:app/vdj-tapis-js",
     "vdjserver-schema": "file:app/vdjserver-schema",
-    "underscore": "1.7.0"
+    "underscore": ">=1.12.1"
   },
   "devDependencies": {
     "eslint": "^7.9.0"
