--- a/swagger/vdjserver-api.yaml
+++ b/swagger/vdjserver-api.yaml
@@ -557,7 +557,7 @@ paths:
             type: string
             enum:
               - subject
-              - sample
+              - sample_processing
       requestBody:
         content:
           'application/json':
@@ -615,7 +615,7 @@ paths:
             type: string
             enum:
               - subject
-              - sample
+              - sample_processing
       responses:
         '200':
           description: Success.
