better email handling

--- a/.env.defaults
+++ b/.env.defaults
@@ -67,6 +67,7 @@ FEEDBACK_EMAIL_ADDRESS=vdjserver@utsouthwestern.edu
 REPLYTO_EMAIL_ADDRESS=vdjserver@utsouthwestern.edu
 POSTFIX_HOSTNAME=
 POSTFIX_RELAYHOST=
+POSTFIX_RELAYPORT=
 
 # Dev Settings
 DEBUG_CONSOLE=false
