--- a/.env.defaults
+++ b/.env.defaults
@@ -27,6 +27,7 @@ VDJ_BACKBONE_HOST=
 # MongoDB
 MONGODB_HOST=vdjr-mongo
 MONGODB_DB=v1airr
+TAPIS_MONGODB_DB=$MONGODB_DB
 MONGODB_USER=
 MONGODB_SECRET=
 MONGODB_QUERY_COLLECTION=
