--- a/swagger/vdjserver-api.yaml
+++ b/swagger/vdjserver-api.yaml
@@ -23,7 +23,7 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
 
-openapi: '3.0'
+openapi: '3.0.0'
 info:
   title: VDJServer API
   version: '2.0.0'
@@ -35,7 +35,7 @@ info:
     API service for the VDJServer analysis portal.
 
 servers:
-  - url: https://vdjserver.org/api/v2
+  - url: http://localhost:8080/api/v2
     description: Production server
     variables:
       basePath:
