--- a/swagger/vdjserver-api.yaml
+++ b/swagger/vdjserver-api.yaml
@@ -1426,6 +1426,28 @@ paths:
         '500':
           description: Internal service error occurred.
 
+  /user/identity:
+    get:
+      description: get all user profiles
+      operationId: getUserIdentity
+      tags:
+        - user
+      security:
+        - user_authorization: []
+      responses:
+        '200':
+          description: Success.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BasicResponse'
+        '400':
+          description: Bad request.
+        '401':
+          description: Not authorized.
+        '500':
+          description: Internal service error occurred.
+
   /user/duplicate/{username}:
     get:
       description: check for duplicate username
