service account JWT

--- a/.env.defaults
+++ b/.env.defaults
@@ -16,6 +16,7 @@ WSO2_HOST=vdj-agave-api.tacc.utexas.edu
 # VDJ Service Account Settings
 VDJ_SERVICE_ACCOUNT=
 VDJ_SERVICE_ACCOUNT_SECRET=
+VDJ_SERVICE_ACCOUNT_JWT=
 
 # VDJ Guest Account Settings
 VDJ_GUEST_ACCOUNT=
