--- a/.env.defaults
+++ b/.env.defaults
@@ -21,6 +21,7 @@ VDJ_SERVICE_ACCOUNT_JWT=
 # VDJ Guest Account Settings
 VDJ_GUEST_ACCOUNT=
 VDJ_GUEST_ACCOUNT_SECRET=
+VDJ_GUEST_ACCOUNT_JWT=
 
 # VDJ Backbone Settings
 VDJ_BACKBONE_HOST=
